test/cases/negative/existing7.jsx

export class Foo {

}
export function Bar() {

}

const a = new Foo()
const b = new Bar()
